Bug 326170 - releasechecker forked more than once
Summary: releasechecker forked more than once
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 2.0.65
Platform: unspecified Other
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-17 23:41 UTC by Harald Sitter
Modified: 2013-11-01 12:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2013-10-17 23:41:05 UTC
after starting muon-updater one gets up to 4 releasechecker instances, all doing the same thing eventually disappearing

Reproducible: Always
Comment 1 Aleix Pol 2013-11-01 12:22:16 UTC
Git commit fe4bde4a9214ae956a435e5bbd32731d6debc444 by Aleix Pol.
Committed on 01/11/2013 at 11:19.
Pushed by apol into branch '2.1'.

Dramatically reduce the times releasechecker is spawned

It was happening over every state change of the actions, not cool.

M  +5    -4    libmuonapt/QAptActions.cpp
M  +1    -0    libmuonapt/QAptActions.h

http://commits.kde.org/muon/fe4bde4a9214ae956a435e5bbd32731d6debc444