Dramatically reduce the times releasechecker is spawned

It was happening over every state change of the actions, not cool.

BUG: 326170