libmuonapt/QAptActions.cpp
@@ -54,6 +54,7 @@ QAptActions::QAptActions()
     , m_mainWindow(nullptr)
     , m_reloadWhenEditorFinished(false)
     , m_historyDialog(nullptr)
+    , m_distUpgradeAvailable(false)
 {
     connect(Solid::Networking::notifier(), SIGNAL(statusChanged(Solid::Networking::Status)),
             this, SLOT(networkChanged()));
@@ -94,6 +95,7 @@ void QAptActions::setBackend(QApt::Backend* backend)
     setReloadWhenEditorFinished(true);
     // Some actions need an initialized backend to be able to set their enabled state
     setActionsEnabled(true);
+    checkDistUpgrade();
 }
 
 void QAptActions::setupActions()
@@ -175,9 +177,8 @@ void QAptActions::setupActions()
     distUpgradeAction->setPriority(QAction::HighPriority);
     distUpgradeAction->setWhatsThis(i18nc("Notification when a new version of Kubuntu is available",
                                         "A new version of Kubuntu is available."));
-    distUpgradeAction->setEnabled(false);
+    distUpgradeAction->setEnabled(m_distUpgradeAvailable);
     connect(distUpgradeAction, SIGNAL(triggered(bool)), SLOT(launchDistUpgrade()));
-    checkDistUpgrade();
 
     m_actions.append(saveInstalledAction);
 }
@@ -204,8 +205,7 @@ void QAptActions::setActionsEnabledInternal(bool enabled)
     bool changesPending = m_backend && m_backend->areChangesMarked();
     actionCollection()->action("save_markings")->setEnabled(changesPending);
     actionCollection()->action("save_download_list")->setEnabled(changesPending);
-    actionCollection()->action("dist-upgrade")->setEnabled(false);
-    checkDistUpgrade();
+    actionCollection()->action("dist-upgrade")->setEnabled(m_distUpgradeAvailable);
 }
 
 bool QAptActions::reloadWhenSourcesEditorFinished() const
@@ -553,5 +553,6 @@ void QAptActions::checkDistUpgrade()
 
 void QAptActions::checkerFinished(int res)
 {
+    m_distUpgradeAvailable = res == 0;
     QAptActions::self()->actionCollection()->action("dist-upgrade")->setEnabled(res == 0);
 }
